# IceLoftSDK

./: .gitignore  CMakeLists.txt  IceLoftSDK.sln  README.md
GameTest/: GameTest.vcxproj
IceLoftSDK/: CMakeLists.txt  IceLoftSDK.vcxproj  IceLoftSDK.vcxproj.filters  IclShader.cpp  IclShader.h  Node.cpp  Node.h  ResourceManager.cpp  imgui.ini
IceLoftSDK/src/Base/: Drawable.cpp  Drawable.h  Node.cpp  Node.h  Object.h
IceLoftSDK/src/Engine/: DataStructs.h  Game.cpp  Game.h  Input.cpp  InputManager.cpp  LevelManager.h  Log.h
IceLoftSDK/src/Include/ImGUI/: imgui.cpp  imgui.h
IceLoftSDK/src/Level/: Level.cpp  Level.h
IceLoftSDK/src/Level/3D/: Node3D.h
IceLoftSDK/src/Level/Common/: Transform.h
IceLoftSDK/src/Resource/: IclShader.cpp  IclShader.h  Texture.cpp
IceLoftSDK/src/Scene/: Root.cpp  Root.h
IceLoftSrc/: glad.c  main.cpp
IclClasses/: Drawable.cpp  Drawable.h  Game.cpp  Game.h  IclShader.cpp  IclShader.h  Node.cpp  Node.h  Resource.cpp  Resource.h  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
IclClasses/Engine/: Input.cpp  Input.h  Viewport.cpp  Viewport.h
IclClasses/Node/: Node3D.h  Root.h  Transform.h
IclClasses/Resource/: IclShader.h  Texture.h  TextureAtlas.h
Includes/assimp/: revision.h
Includes/engineGraphicalClasses/: shader_s.h
Includes/glad/: glad.h
Includes/icl/: engine.h  iceloft_debug.cpp  icl_camera.h  icl_debug.h  icl_texture.h  icl_ui.h  inpt.cpp  inpt.h
Libs/: glfw3.lib
TestIclGame/: CMakeLists.txt
TestIclGame/src/: main.cpp
src/: DataStructs.h
src/Base/: Drawable.h  Node.cpp
src/Engine/: DataStructs.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  LevelManager.cpp  Log.h
src/Level/: Level.cpp  Level.h
src/Level/3D/: Node3D.h
src/Level/Common/: Transform.cpp
src/Resource/: ShaderProgram.h  Texture.h
